--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "vue": "^3.4.0"
     },
     "dependencies": {
-        "aos": "^2.3.4"
+        "aos": "^2.3.4",
+        "vue-multiselect": "^3.0.0"
     }
 }
