--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     },
     "dependencies": {
         "aos": "^2.3.4",
+        "maz-ui": "^3.43.4",
         "vue-multiselect": "^3.0.0"
     }
 }
