feat: sidebar y header funcionan correctamente responsivamente usando vuex para el manejo de estados

--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
         "vue": "^3.4.0"
     },
     "dependencies": {
+        "@vueuse/core": "^10.9.0",
         "aos": "^2.3.4",
         "maz-ui": "^3.43.4",
-        "vue-multiselect": "^3.0.0"
+        "vue-multiselect": "^3.0.0",
+        "vuex": "^4.0.2"
     }
 }
