feat: crear tutorias y vista para crear tutorias

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "postcss": "^8.4.38",
         "prettier": "3.2.5",
         "prettier-plugin-tailwindcss": "^0.5.14",
+        "tailwind-scrollbar": "^3.1.0",
         "tailwindcss": "^3.4.3",
         "vite": "^5.0.0",
         "vue": "^3.4.0"
@@ -24,6 +25,7 @@
     "dependencies": {
         "@vueuse/core": "^10.9.0",
         "aos": "^2.3.4",
+        "date-fns": "^3.6.0",
         "maz-ui": "^3.43.4",
         "vue-multiselect": "^3.0.0",
         "vuex": "^4.0.2"
