--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
         "vue": "^3.4.0"
     },
     "dependencies": {
+        "@heroicons/vue": "^2.1.3",
         "@vueuse/core": "^10.9.0",
         "aos": "^2.3.4",
+        "class-variance-authority": "^0.7.0",
         "date-fns": "^3.6.0",
+        "flowbite": "^2.3.0",
         "maz-ui": "^3.43.4",
         "vue-multiselect": "^3.0.0",
         "vuex": "^4.0.2"
